Remove unused code, and change default input file